# sms-spam-detection

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
openspec/: AGENTS.md  project.md
openspec/changes/add-spam-detector/: change.yaml
openspec/schemas/: prediction.yaml
openspec/templates/: change-template.yaml
scripts/: train_model.py
