[project]
name = "sms-spam-detection"
version = "0.1.0"
description = "SMS spam detection using machine learning with Streamlit interface"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "joblib>=1.3.0",
]
